# SoftwareRendererGP2X

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindPthread.cmake
examples/: CMakeLists.txt
examples/cow/: CMakeLists.txt  main.cpp
examples/example1/: CMakeLists.txt  example1.cpp
examples/example2/: CMakeLists.txt  example2.cpp
examples/multisample/: CMakeLists.txt  colorwheel.cpp  line.cpp  triangle.cpp
examples/performance/: CMakeLists.txt  performance.cpp
examples/threaded/: CMakeLists.txt  cow_threaded1.cpp  cow_threaded2.cpp
examples/userdata/: CMakeLists.txt  userdata.cpp
src/: CMakeLists.txt
src/fixedpoint/: CMakeLists.txt  fixed_func.h
src/renderer/: CMakeLists.txt  Readme.txt  duffsdevice.h  fixed_func.h  geometry_processor.cpp  geometry_processor.h  geometry_processor_parallel.h  irasterizer.h  rasterizer_parallel.h  rasterizer_subdivaffine.h  rasterizer_tsbase.h  span.h  stepmacros.h  stepmacros_undef.h  util.h  vertex_processor.h
src/util/: CMakeLists.txt  objdata.cpp  objdata.h
